src/test/resources/rules/fail/MethodName.java
package rules.fail;

public class MethodName {
    public void BadMethod() {}
}